option optimize_for = SPEED;
option cc_generic_services = false;

enum ESOMsg {
	k_ESOMsg_Create = 21;
	k_ESOMsg_Update = 22;
	k_ESOMsg_Destroy = 23;
	k_ESOMsg_CacheSubscribed = 24;
	k_ESOMsg_CacheUnsubscribed = 25;
	k_ESOMsg_UpdateMultiple = 26;
	k_ESOMsg_CacheSubscriptionRefresh = 28;
	k_ESOMsg_CacheSubscribedUpToDate = 29;
}

enum EGCBaseClientMsg {
	k_EMsgGCPingRequest = 3001;
	k_EMsgGCPingResponse = 3002;
	k_EMsgGCToClientPollConvarRequest = 3003;
	k_EMsgGCToClientPollConvarResponse = 3004;
	k_EMsgGCCompressedMsgToClient = 3005;
	k_EMsgGCCompressedMsgToClient_Legacy = 523;
	k_EMsgGCClientWelcome = 4004;
	k_EMsgGCServerWelcome = 4005;
	k_EMsgGCClientHello = 4006;
	k_EMsgGCServerHello = 4007;
	k_EMsgGCClientConnectionStatus = 4009;
	k_EMsgGCServerConnectionStatus = 4010;
}

